@@ -1,3 +1,9 @@
+2008-05-22  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/plot/XYPlot.java
+    (calculateAxisSpace): Calculate space for range axes first, adjust the
+    plotArea then calculate the space for the domain axes.
+
 2008-05-14  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/xy/XYStepAreaRenderer.java
